Fixes for header on mobile

--- a/resources/styles/sass/header.scss
+++ b/resources/styles/sass/header.scss
@@ -76,6 +76,9 @@ header {
             @media screen and (min-width: 1900px) {
                 letter-spacing: 0.2rem;
             }
+            @media screen and (max-width: 480px) {
+                letter-spacing: 0.2rem;
+            }
         }
 
         :nth-child(2) {
@@ -97,7 +100,8 @@ header {
                 font-size: 2.2vw;
             }
             @media screen and (max-width: 480px) {
-                font-size: 5vw;
+                text-align: center;
+                font-size: 7vw;
             }
             color: black;
             letter-spacing: 0.5rem;
@@ -105,7 +109,7 @@ header {
                 letter-spacing: 0.3rem;
             }
             @media screen and (max-width: 480px) {
-                letter-spacing: 0.2rem;
+                letter-spacing: 0.1rem;
             }
         }
     }
